--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 window.VG_CONFIG = {
                     ID: "qrwch1441jkab1g0",
                     region: 'eu', // 'eu' or 'na'corresponding to Europe and North America
-                    render: 'full-width', // popup or full-width
+                    render: 'popup', // popup or full-width
                     stylesheets: [
                         // Base TIXAE Agents CSS
                         "https://vg-bunny-cdn.b-cdn.net/vg_live_build/styles.css",
